--- a/ProvaCandidato.Web/Views/Shared/_Layout.cshtml
+++ b/ProvaCandidato.Web/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div class="container body-content">
-    <h1 class="title">Parametrize o Nome da Empresa Aqui</h1>
+    <h1 class="title">@System.Configuration.ConfigurationManager.AppSettings["NomeEmpresa"]</h1>
     <div class="navbar navbar-inverse">
       <div class="container">
         <div class="navbar-header">
