--- a/ProvaCandidato.Web/Views/Teste/Index.cshtml
+++ b/ProvaCandidato.Web/Views/Teste/Index.cshtml
@@ -1,11 +1,10 @@
 ﻿@model IEnumerable<ProvaCandidato.Data.Entidade.Cliente>
 
 @{
-    ViewBag.Title = "Visualizar";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewBag.Title = "Index";
 }
 
-<h2>Visualizar</h2>
+<h2>Index</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
