--- a/ProvaCandidato.Web/Views/Shared/_Layout.cshtml
+++ b/ProvaCandidato.Web/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
       @RenderBody()
     </div>
     <footer>
-      <div class="linha">2017 &copy; - Parametrize o Nome da Empresa Aqui</div>
+      <div class="linha">2017 &copy; - @System.Configuration.ConfigurationManager.AppSettings["NomeEmpresa"]</div>
     </footer>
   </div>
   @Scripts.Render("~/bundles/jquery")
